# halloween-mini-app

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml  requirements-dev.txt
backend/app/: history.py  main.py  schemas.py  story_templates.py
backend/tests/: test_api.py
frontend/: README.md  package-lock.json  package.json  playwright.config.ts
frontend/src/: App.tsx  i18n.ts
frontend/src/components/: Button.tsx  Card.tsx  HistoryTimeline.tsx  ResultBadge.tsx
frontend/src/lib/: api.ts
frontend/src/styles/: index.css
frontend/tests/: happy-path.spec.ts
