[tool.poetry]
name = "halloween-backend"
version = "0.1.0"
description = "FastAPI backend for Halloween mini apps"
authors = ["you <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
python-multipart = "^0.0.9"
pydantic = "^2.9.0"
loguru = "^0.7.2"
prometheus-fastapi-instrumentator = "^7.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0"
ruff = "^0.6.0"
httpx = "^0.28.1"
pytest = "^8.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
